--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@
         <p>You feel like making waffles. But you don't know how to make waffles.</p>
         <img src='waffle.png' width='300px' />
     </body>
-</html<
+</html>
