started making prologue

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset='utf-8' />
         <title>Incremental Game</title>
         <script type='text/javascript' src='jquery-1.11.1.min.js'></script>
+        <script type='text/javascript' src='prologue.js'></script>
         <script type='text/javascript' src='main.js'></script>
     </head>
     <body>
-        <p>You feel like making waffles. But you don't know how to make waffles.</p>
-        <img src='waffle.png' width='300px' />
+		<noscript>You have JavaScript disabled! Waffles require JavaScript in order to preserve their waffleness. Please enable JavaScript and then <a href='#' style='color:#00f'>refresh the page</a>.</noscript>
     </body>
 </html>
